# asteroids-rs

./: Cargo.toml  README.md
src/: main.rs
src/asteroid/: components.rs  mod.rs  resources.rs  systems.rs
src/bullet/: components.rs  mod.rs  systems.rs
src/enemy/: components.rs  mod.rs  resources.rs  systems.rs
src/game/: events.rs  mod.rs  resources.rs  systems.rs  utils.rs
src/game_over/: components.rs  mod.rs  styles.rs
src/game_over/systems/: interactions.rs  layout.rs
src/main_menu/: mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/player/: components.rs  mod.rs  resources.rs  systems.rs  utils.rs
src/score/: mod.rs  resources.rs  systems.rs
src/ui/: mod.rs
src/ui/hud/: components.rs  mod.rs  styles.rs
src/ui/hud/systems/: layout.rs  updates.rs
