[package]
name = "asteroids_rust"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = "0.10"
bevy_ui = "0.10"
rand = "0.8.5"
wasm-bindgen = "0.2.74"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = 'thin'

[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"